@@ -1,4 +1,4 @@
-                            GMime, version 1.0.2
+                            GMime, version 1.0.3
                    by Jeffrey Stedfast <fejj@helixcode.com>
 
 
