@@ -1,5 +1,11 @@
 2002-07-11  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* configure.in: Bumped version to 1.0.3
+
+	* README: Updated.
+
+2002-07-11  Jeffrey Stedfast  <fejj@ximian.com>
+
 	* gmime-utils.c (g_string_append_len): Updated the usage of
 	strlcpy to match the new API (which was updated to match the
 	Solaris strlcpy API).
